# aim

./: .gitattributes  main.cpp-renamed  test-with-2d-replacing-entry.h.txt
aim-v1/: .gitignore
aim-v1/engine/src/: Makefile  TODO.txt  application.cpp  application.h  build.bat  entry.h  game.h
aim-v1/engine/src/core/logger/: logger.cpp
aim-v1/juego/src/: build-juego.bat  entry.cpp  entryy.cpp  game.cpp  game.h
aim-v1/src/: Makefile  build.bat  generate_etags.bat  main.cpp
aim-v1/src/core/logger/: logger.cpp  logger.h
aim-v2/: Makefile  generate_etags.bat
aim-v2/engine/: build-engine.bat
aim-v2/engine/src/: app.cpp  app.h  defines.h  entry.h  game_types.h  platform.cpp  platform.h  renderer.cpp  renderer.h  vk_initializers.cpp  vk_initializers.h  vk_types.h
aim-v2/sandbox/: build-sandbox.bat
aim-v2/sandbox/src/: entry.cpp  game.cpp  game.h
aim-v2/test-non-engine/windowing-systems/sdl/src/: build.bat
aim-v3/: .gitignore  imgui.ini
aim-v3/engine/: build-engine.bat
aim-v3/engine/src/: app.cpp  platform.cpp  platform.h  renderer.cpp  renderer.h  vk_pipelines.cpp
aim-v3/sandbox/: build-sandbox.bat
aim-v3/sandbox/src/: entry.cpp
aim-v4 colorbuffer/: .gitignore  build-all.bat  imgui.ini
aim-v4 colorbuffer/engine/: build-engine.bat
aim-v4 colorbuffer/engine/src/: app.cpp  cpu_renderer.cpp  cpu_renderer.h  cs.bat  defines.cpp  descriptors.cpp  descriptors.h  platform.cpp  platform.h  renderer.cpp  renderer.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
aim-v4 colorbuffer/engine/src/core/logger/: logger.h
aim-v4 colorbuffer/sandbox/: build-sandbox.bat
aim-v4 colorbuffer/sandbox/src/: entry.cpp  game.cpp  game.h
aim-v5/: .gitattributes  CMakeLists.txt  CommonMacros.txt  checkpoints.md  imgui.ini
aim-v5/engine/: .gitattributes  CMakeLists.txt
aim-v5/engine/assets/: 1.colors.fs  1.colors.vs  1.light_cube.fs  5.1.light_casters.fs  5.1.light_casters.vs  5.2.light_casters.fs  6.multiple_lights.fs  6.multiple_lights.fs.glsl  6.multiple_lights.vs.glsl  gltf.fs  gltf.vs  gouraud.fs  gouraud.vs  line_shader.fs  line_shader.vs  skel_shader-2.fs.glsl  skel_shader-2.vs.glsl  skel_shader-anton-part-1.fs.glsl  skel_shader-anton-part-1.vs.glsl  skel_shader.fs.glsl  skel_shader.vs.glsl
aim-v5/engine/assets/cars/: porsche_911_gt3_cup.mtl
aim-v5/engine/assets/handmade/: basic-shader.fs  basic-shader.vs
aim-v5/engine/assets/models/: 1.glb  1.gltf  2.gltf  Animations_Assault_Rifle.gltf  CesiumMan.gltf  Glock.glb  Glock2.glb  RIG_AssaultRifle.gltf  anots.txt  assault-rifle-scaled.glb  assault-rifle-yup.glb  assault-rifle.gltf  blender-monkey-with-mat.gltf  blender-monkey.gltf  boblampclean.md5mesh  complete.gltf  default-cube-colored.gltf  default-cube-scaled-down-to-0.5.gltf  default-cube.gltf  final-video.gltf  gusano.glb  gusano.gltf  gusano2.glb  hdp1.glb  hello.gltf  jaja.gltf  mono-del-orto.gltf  mono-puto.gltf  untitled2.glb
aim-v5/engine/assets/models/Unreal/: 1-arms,armature+root.glb  SK_AssaultRifle.fbx  SK_FP_Manny_Simple.fbx  SK_FP_Manny_Simple_Y_UP.fbx  SM_AssaultRifle_Casing.fbx  SM_AssaultRifle_Magazine.fbx  rifle-applied-modi.fbx
aim-v5/engine/assets/models/Unreal/Animations/: A_FP_AssaultRifle_Aim_Pose.fbx  A_FP_AssaultRifle_Equip.fbx  A_FP_AssaultRifle_Fire.fbx  A_FP_AssaultRifle_Fire_Aimed.fbx  A_FP_AssaultRifle_Holster.fbx  A_FP_AssaultRifle_Idle_Loop.fbx  A_FP_AssaultRifle_Idle_Loop_Aimed.fbx  A_FP_AssaultRifle_Idle_Pose.fbx  A_FP_AssaultRifle_Reload.fbx  A_FP_AssaultRifle_Run_Loop.fbx  A_FP_AssaultRifle_Walk_F_Loop.fbx  A_FP_AssaultRifle_Walk_F_Loop_Aimed.fbx  A_FP_WEP_AssaultRifle_Fire.fbx  A_FP_WEP_AssaultRifle_Reload.fbx
aim-v5/engine/assets/tracks/: ja.py  spa.csv  spa.mtl
aim-v5/engine/jaja/glad/: glad.h
aim-v5/engine/src/: AssimpLoader.h  Mesh.h  Model.h  PhysicsSystem.cpp  PhysicsSystem.h  Player.h  SomePhysics.cpp  SomePhysics.h  Track.h  Vehicle.h  application.cpp  application.h  better_camera.cpp  better_camera.h  components.h  defines.h  entry - Copy.copy  entry.h  game_types.h  jolt_debug_renderer.cpp  jolt_debug_renderer.h  main.cpp
aim-v5/engine/src/core/logger/: logger.cpp  logger.h
aim-v5/engine/src/handmade/: handmade.h
aim-v5/engine/src/learnopengl/: camera.h  fps_camera.h  shader_m.h
aim-v5/sandbox/: CMakeLists.txt
aim-v5/sandbox/src/: entry.cpp  game.cpp  game.h  glad.c
emacs/: init.el
test-non-engine/windowing-systems/sdl/src/: build.bat  main.cpp
